--- a/inventory.yml
+++ b/inventory.yml
@@ -1,2 +1,3 @@
 [webservers]
 172.31.27.171 ansible_ssh_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/teammy.pem.pem
+###Please replace the IP Address above by the IP address of your target server
